--- a/index.html
+++ b/index.html
@@ -46,8 +46,16 @@
                     <div id="chair">
                         <img src="assets/images/chair.svg" alt="">
                     </div>
-                    <div id="stand">
-                        <img src="assets/images/stand.svg" alt="">
+                    <div class="table-stand">
+                        <div id="steam">
+                            <img src="assets/images/steam.svg" alt="">
+                        </div>
+                        <div id="mug">
+                            <img src="assets/images/mug.svg" alt="">
+                        </div>
+                        <div id="stand">
+                            <img src="assets/images/stand.svg" alt="">
+                        </div>
                     </div>
                     <div id="plants2">
                         <img src="assets/images/plants2.svg" alt="">
