--- a/me.html
+++ b/me.html
@@ -28,6 +28,24 @@
             <div class="me">
                 <img src="assets/images/me.jpg" width = 30% alt="">
             </div>
+
+            <div class="about-me">
+                <h2>
+                    Hi! I'm Julia Deng. 
+                </h2>
+                <p>
+                    I love reading, plants, tea, fuzzy socks, snacking, and 
+                    looking at pictures of houses and interior decoration on Pinterest!
+                </p>
+                <div class="links">
+                    <div class="goodreads">
+                        <a href="https://www.goodreads.com/user/show/18338249-julia"><img src="assets/images/goodreads.svg" alt="" id="g"></a>
+                    </div>
+                    <div class="pinterest">
+                        <a href="https://www.pinterest.com/jujdeng/"><img src="assets/images/pinterest.svg" alt="" id="p"></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
