--- a/family.html
+++ b/family.html
@@ -2,63 +2,65 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="assets/styles/pagestyle.css">
-        <script type="text/javascript" src="assets/js/script.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Solway&display=swap" rel="stylesheet">
     </head>
 
     <body>
-        <header>
-            <h1>contents</h1>
-            <div class="nav-bar">
-                <nav>
-                    <ul>
-                        <li><a href="index.html">home</a></li>
-                        <li><a href="family.html">family</a></li>
-                        <li><a href="me.html">me</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>         
-
-        
         <div class="background">
             <img src="assets/images/book.svg" alt="">
         </div>
 
-        <div id="carousel">
-            <div id="carousel-controls">
-                <button id="button-previous" class="hidden">
-                    <img src="assets/images/leftarrow.png" alt="Previous">
-                </button>
-                <button id="button-next">
-                    <img src="assets/images/rightarrow.png" alt="Next">
-                </button>
+        <div class="pages">
+            <div class="left-page">
+                <h1>contents</h1>
+
+                <div class="nav-bar">
+                    <nav>
+                        <ul>
+                            <li><a href="index.html">home</a></li>
+                            <li><a href="family.html">family</a></li>
+                            <li><a href="me.html">me</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
 
-            <div id="carousel-image-row">
-                <div class="carousel-image">
-                    <img src="assets/images/aquarium.jpg" alt="">
+
+            <div id="carousel">
+                <div id="carousel-controls">
+                    <button id="button-previous" class="hidden">
+                        <img src="assets/images/leftarrow.png" alt="Previous">
+                    </button>
+                    <button id="button-next">
+                        <img src="assets/images/rightarrow.png" alt="Next">
+                    </button>
                 </div>
-                <div class="carousel-image">
-                    <img src="assets/images/green.jpg" alt="">
-                </div>
-                <div class="carousel-image">
-                    <img src="assets/images/mom.jpg" alt="">
-                </div>
-                <div class="carousel-image">
-                    <img src="assets/images/beach.jpg" alt="">
-                </div>
-                <div class="carousel-image">
-                    <img src="assets/images/josh.jpg" alt="">
-                </div>
-                <div class="carousel-image">
-                    <img src="assets/images/sibs.jpg" alt="">
-                </div>
-                <div class="carousel-image">
-                    <img src="assets/images/dad.jpg" alt="">
+
+                <div id="carousel-image-row">
+                    <div class="carousel-image">
+                        <img src="assets/images/aquarium.jpg" alt="">
+                    </div>
+                    <div class="carousel-image">
+                        <img src="assets/images/green.jpg" alt="">
+                    </div>
+                    <div class="carousel-image">
+                        <img src="assets/images/mom.jpg" alt="">
+                    </div>
+                    <div class="carousel-image">
+                        <img src="assets/images/beach.jpg" alt="">
+                    </div>
+                    <div class="carousel-image">
+                        <img src="assets/images/josh.jpg" alt="">
+                    </div>
+                    <div class="carousel-image">
+                        <img src="assets/images/sibs.jpg" alt="">
+                    </div>
+                    <div class="carousel-image">
+                        <img src="assets/images/dad.jpg" alt="">
+                    </div>
                 </div>
             </div>
         </div>
-        
+        <script type="text/javascript" src="assets/js/pagescript.js"></script>
     </body>
 </html>
