--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="assets/styles/style.css">
-        <script type="text/javascript" src="assets/js/script.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Solway&display=swap" rel="stylesheet">
     </head>
 
@@ -29,7 +28,7 @@
                 <div class="top-row">
                 <!--each image is an id -->
                     <div id="window">
-                        <img src="assets/images/day.svg" alt="">
+                        <img src="assets/images/day.svg" id="windowImg" alt="">
                     </div>
                     <div id="plants1">
                         <img src="assets/images/plants1.svg" alt="">
@@ -41,7 +40,7 @@
 
                 <div class="bottom-row">
                     <div id="lamp">
-                        <img src="assets/images/lamp-on.svg" alt="">
+                        <img src="assets/images/lamp-off.svg" id="lampImg" alt="">
                     </div>
                     <div id="chair">
                         <img src="assets/images/chair.svg" alt="">
@@ -65,5 +64,6 @@
         </div>
 
         <div class="floor"></div>
+        <script type="text/javascript" src="assets/js/script.js"></script>        
     </body>
 </html>
