--- a/me.html
+++ b/me.html
@@ -7,29 +7,30 @@
     </head>
 
     <body>
-        <div class="container">
+        <div class="background">
+            <img src="assets/images/book.svg" alt="">
+        </div>
 
-            <div class="background">
-                <img src="assets/images/book.svg" alt="">
+        <div class="pages">
+            <div class="left-page">
+                <h1>contents</h1>
+
+                <div class="nav-bar">
+                    <nav>
+                        <ul>
+                            <li><a href="index.html">home</a></li>
+                            <li><a href="family.html">family</a></li>
+                            <li><a href="me.html">me</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
 
-            <h1>contents</h1>
-
-            <div class="nav-bar">
-                <nav>
-                    <ul>
-                        <li><a href="index.html">home</a></li>
-                        <li><a href="family.html">family</a></li>
-                        <li><a href="me.html">me</a></li>
-                    </ul>
-                </nav>
-            </div>
-
-            <div class="me">
-                <img src="assets/images/me.jpg" width = 30% alt="">
-            </div>
-
-            <div class="about-me">
+        
+            <div class="right-page">
+                <div class="me">
+                    <img src="assets/images/me.jpg" width = 30% alt="">
+                </div>
                 <h2>
                     Hi! I'm Julia Deng. 
                 </h2>
@@ -39,10 +40,10 @@
                 </p>
                 <div class="links">
                     <div class="goodreads">
-                        <a href="https://www.goodreads.com/user/show/18338249-julia"><img src="assets/images/goodreads.svg" alt="" id="g"></a>
+                        <a href="https://www.goodreads.com/user/show/18338249-julia" target="_blank"><img src="assets/images/goodreads.svg" alt="" id="g"></a>
                     </div>
                     <div class="pinterest">
-                        <a href="https://www.pinterest.com/jujdeng/"><img src="assets/images/pinterest.svg" alt="" id="p"></a>
+                        <a href="https://www.pinterest.com/jujdeng/" target="_blank"><img src="assets/images/pinterest.svg" alt="" id="p"></a>
                     </div>
                 </div>
             </div>
