--- a/family.html
+++ b/family.html
@@ -25,38 +25,39 @@
                 </div>
             </div>
 
+            <div class="right-page">
+                <div id="carousel">
+                    <div id="carousel-controls">
+                        <button id="button-previous" class="hidden">
+                            <img src="assets/images/leftarrow.png" alt="Previous">
+                        </button>
+                        <button id="button-next">
+                            <img src="assets/images/rightarrow.png" alt="Next">
+                        </button>
+                    </div>
 
-            <div id="carousel">
-                <div id="carousel-controls">
-                    <button id="button-previous" class="hidden">
-                        <img src="assets/images/leftarrow.png" alt="Previous">
-                    </button>
-                    <button id="button-next">
-                        <img src="assets/images/rightarrow.png" alt="Next">
-                    </button>
-                </div>
-
-                <div id="carousel-image-row">
-                    <div class="carousel-image">
-                        <img src="assets/images/aquarium.jpg" alt="">
-                    </div>
-                    <div class="carousel-image">
-                        <img src="assets/images/green.jpg" alt="">
-                    </div>
-                    <div class="carousel-image">
-                        <img src="assets/images/mom.jpg" alt="">
-                    </div>
-                    <div class="carousel-image">
-                        <img src="assets/images/dad.jpg" alt="">
-                    </div>
-                    <div class="carousel-image">
-                        <img src="assets/images/josh.jpg" alt="">
-                    </div>
-                    <div class="carousel-image">
-                        <img src="assets/images/sibs.jpg" alt="">
-                    </div>
-                    <div class="carousel-image">
-                        <img src="assets/images/beach.jpg" alt="">
+                    <div id="carousel-image-row">
+                        <div class="carousel-image">
+                            <img src="assets/images/aquarium.jpg" alt="">
+                        </div>
+                        <div class="carousel-image">
+                            <img src="assets/images/green.jpg" alt="">
+                        </div>
+                        <div class="carousel-image">
+                            <img src="assets/images/mom.jpg" alt="">
+                        </div>
+                        <div class="carousel-image">
+                            <img src="assets/images/dad.jpg" alt="">
+                        </div>
+                        <div class="carousel-image">
+                            <img src="assets/images/josh.jpg" alt="">
+                        </div>
+                        <div class="carousel-image">
+                            <img src="assets/images/sibs.jpg" alt="">
+                        </div>
+                        <div class="carousel-image">
+                            <img src="assets/images/beach.jpg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
