--- a/family.html
+++ b/family.html
@@ -18,7 +18,7 @@
                     <nav>
                         <ul>
                             <li><a href="index.html">home</a></li>
-                            <li><a href="family.html">family</a></li>
+                            <li><a href="family.html" class="selected">family</a></li>
                             <li><a href="me.html">me</a></li>
                         </ul>
                     </nav>
