--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div class="nav-bar">
                 <nav>
                     <ul>
-                        <li><a href="index.html">home</a></li>
+                        <li><a href="index.html" class="selected">home</a></li>
                         <li><a href="family.html">family</a></li>
                         <li><a href="me.html">me</a></li>
                     </ul>
@@ -41,6 +41,7 @@
                 <div class="bottom-row">
                     <div id="lamp">
                         <img src="assets/images/lamp-off.svg" id="lampImg" alt="">
+                        <img src="assets/images/switch.svg" id="button" alt="">
                     </div>
                     <div id="chair">
                         <img src="assets/images/chair.svg" alt="">
