--- a/me.html
+++ b/me.html
@@ -19,7 +19,7 @@
                         <ul>
                             <li><a href="index.html">home</a></li>
                             <li><a href="family.html">family</a></li>
-                            <li><a href="me.html">me</a></li>
+                            <li><a href="me.html" class="selected">me</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -34,7 +34,8 @@
                 </h2>
                 <p>
                     I love reading, plants, tea, fuzzy socks, snacking, and 
-                    looking at pictures of houses and interior decoration on Pinterest!
+                    looking at pictures of houses and interior decoration!
+                    
                 </p>
                 <div class="links">
                     <div class="goodreads">
@@ -42,6 +43,9 @@
                     </div>
                     <div class="pinterest">
                         <a href="https://www.pinterest.com/jujdeng/" target="_blank"><img src="assets/images/pinterest.svg" alt="" id="p"></a>
+                    </div>
+                    <div class="vsco">
+                        <a href="https://www.vsco.co/jujdeng" target="_blank"><img src="assets/images/vsco.svg" alt="" id="v"></a>
                     </div>
                 </div>
             </div>
