actually not done

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="bottom-row">
                     <div id="lamp">
                         <img src="assets/images/lamp-off.svg" id="lampImg" alt="">
-                        <img src="assets/images/switch.svg" id="button" alt="">
+                        <img src="assets/images/button.svg" id="button" alt="">
                     </div>
                     <div id="chair">
                         <img src="assets/images/chair.svg" alt="">
