--- a/index.html
+++ b/index.html
@@ -41,12 +41,16 @@
                 <div class="bottom-row">
                     <div id="lamp">
                         <img src="assets/images/lamp-off.svg" id="lampImg" alt="">
+                        <img src="assets/images/light-message.svg" id="light-message" alt="">
                         <img src="assets/images/button.svg" id="button" alt="">
                     </div>
                     <div id="chair">
                         <img src="assets/images/chair.svg" alt="">
                     </div>
                     <div class="table-stand">
+                        <div id="tea-message">
+                            <img src="assets/images/tea-message.svg" alt="">
+                        </div>
                         <div id="steam">
                             <img src="assets/images/steam.svg" alt="">
                         </div>
